# TFG_Hunter20_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tfg_pkg/lib/tfg_pkg/: actuator  coppelia_simulator  keyboard_control_plus
install/tfg_pkg/share/tfg_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tfg_pkg/share/tfg_pkg/cmake/: tfg_pkgConfig-version.cmake  tfg_pkgConfig.cmake
install/tfg_pkg/share/tfg_pkg/environment/: ament_prefix_path.dsv  path.dsv
install/tfg_pkg/share/tfg_pkg/launch/: coppelia_Sim.launch  hunter_params.yaml  (+10 more)
install/urg_c/include/urg_c/: urg_connection.h  urg_debug.h  urg_detect_os.h  urg_errno.h  urg_ring_buffer.h  urg_sensor.h  urg_serial.h  urg_serial_utils.h  urg_tcpclient.h  urg_time.h  urg_utils.h
install/urg_c/share/urg_c/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/urg_node/include/urg_node/: urg_c_wrapper.hpp  urg_node.hpp
install/urg_node/lib/urg_node/: getID  set_urg_ip.py  urg_node_driver
install/urg_node/share/urg_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/urg_node_msgs/share/urg_node_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mapping_rules.yaml  package.sh  package.xml
log/: latest_build
src/tfg_pkg/: CMakeLists.txt  README.txt
src/tfg_pkg/include/tfg_pkg/: actuator.hpp
src/tfg_pkg/launch/: coppelia_Sim.launch  hunter_params.yaml  main.launch  nav2_hunter20_launch.py  nav2_hunter20_params.yaml  nav2_sim_launch.py  nav2_sim_params.yaml  robot.launch  simbot_launch.py  simbot_params.yaml  simulator.launch  urg_hokuyo_launch.py
src/tfg_pkg/rviz/: hunter_robot.rviz  hunter_sim.rviz
src/tfg_pkg/src/: actuator.cpp  keyboard_control_plus.cpp
src/tfg_pkg/urdf/: hunter2.xacro  hunter2_urdf.xml
src/urg_node/: CMakeLists.txt
src/urg_node/launch/: urg_lidar.launch
(+89 files in other folders)
